compiler/tests/fixtures/parse_err/map_missing_colon.yb
broken_map() -> Int {
  x := {"a" 1}
  0
}
